Fix typos in kaggle data cleaning

--- a/datasets/youtube_kaggle_dataset/data_cleaning_kaggle.ipynb
+++ b/datasets/youtube_kaggle_dataset/data_cleaning_kaggle.ipynb
@@ -530,7 +530,7 @@
     "        - Delete missing values\n",
     "        - Keep records only with unique video IDs \n",
     "          with the maximum number of views (the latest request)\n",
-    "        - Delete entries where comments_disabled=True\n",
+    "        - Delete entries where comments_disabled=True or ratings_disabled=True\n",
     "        - Convert \"tags\" field from list of strings to string\n",
     "        - Delete non-ASCII characters and non-English from text columns\n",
     "        - Rename columns to snake case, reorder add empty 'comments' column\n",
@@ -580,7 +580,7 @@
     "    # create new empty column\n",
     "    clean_df['comments'] = \" \"\n",
     "\n",
-    "    # rename column to match snake case\n",
+    "    # rename columns to match snake case\n",
     "    clean_df.rename(columns={'channelTitle': 'channel_title',\n",
     "                             'publishedAt': 'published_at',\n",
     "                             'channelId': 'channel_id'}, inplace=True)\n",
