--- a/datasets/youtube_custom_dataset/dataset_collection.ipynb
+++ b/datasets/youtube_custom_dataset/dataset_collection.ipynb
@@ -918,6 +918,10 @@
     "    symbols = [c for c in \"abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ\"]\n",
     "    clean_df = clean_df[clean_df['title'].str.contains('|'.join(symbols))]\n",
     "    clean_df = clean_df[clean_df['channelTitle'].str.contains('|'.join(symbols))]\n",
+    "    \n",
+    "    # after deleting some characters, the description or tags could become empty\n",
+    "    clean_df.loc[clean_df['tags'] == '', 'tags'] = ' '\n",
+    "    clean_df.loc[clean_df['description'] == '', 'description'] = ' '\n",
     "\n",
     "    # bring the dataset into the same shape of Kaggle dataset\n",
     "    # rename columns\n",
@@ -1248,12 +1252,47 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 37422 entries, 0 to 37421\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column         Non-Null Count  Dtype         \n",
+      "---  ------         --------------  -----         \n",
+      " 0   video_id       37422 non-null  object        \n",
+      " 1   title          37422 non-null  object        \n",
+      " 2   channel_id     37422 non-null  object        \n",
+      " 3   channel_title  37422 non-null  object        \n",
+      " 4   published_at   37422 non-null  datetime64[ns]\n",
+      " 5   view_count     37422 non-null  int32         \n",
+      " 6   likes          37422 non-null  int32         \n",
+      " 7   dislikes       37422 non-null  int32         \n",
+      " 8   comment_count  37422 non-null  int32         \n",
+      " 9   tags           37422 non-null  object        \n",
+      " 10  description    37422 non-null  object        \n",
+      " 11  comments       37422 non-null  object        \n",
+      "dtypes: datetime64[ns](1), int32(4), object(7)\n",
+      "memory usage: 2.9+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
        "37422"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1265,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
