--- a/model.ipynb
+++ b/model.ipynb
@@ -1115,6 +1115,206 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 55,
+   "id": "9c586ab8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fully_connected(verbose=False):\n",
+    "    \n",
+    "    # 3 vectors of numbers\n",
+    "    numbers_input = keras.Input(shape=(3,), name=\"numbers_input\")\n",
+    "\n",
+    "    # Final part of the model\n",
+    "    dense_1 = layers.Dense(32, activation='relu', name='dense_32_units_1')(numbers_input)\n",
+    "    dropout_1 = layers.Dropout(0.1, name=\"dropout_1\")(dense_1)\n",
+    "    dense_2 = layers.Dense(32, activation='relu', name='dense_32_units_2')(dropout_1)\n",
+    "    dropout_2 = layers.Dropout(0.1, name=\"dropout_2\")(dense_2)\n",
+    "    dense_3 = layers.Dense(16, activation='relu', name='dense_16_units')(dropout_2)\n",
+    "    dropout_3 = layers.Dropout(0.1, name=\"dropout_3\")(dense_3)\n",
+    "    output = layers.Dense(1, activation='relu', name='output')(dropout_3)\n",
+    "\n",
+    "\n",
+    "    model = keras.Model(inputs=numbers_input,\n",
+    "                        outputs=output,\n",
+    "                        name=\"dislikes_predictor\")\n",
+    "    if verbose:\n",
+    "        # summarize layers\n",
+    "        print(model.summary())\n",
+    "        # plot model architecture\n",
+    "        plot_model(model, show_shapes=True)\n",
+    "                   # to_file='article/img/network_architecture.png')\n",
+    "            \n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "e478690d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"dislikes_predictor\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " numbers_input (InputLayer)  [(None, 3)]               0         \n",
+      "                                                                 \n",
+      " dense_32_units_1 (Dense)    (None, 32)                128       \n",
+      "                                                                 \n",
+      " dropout_1 (Dropout)         (None, 32)                0         \n",
+      "                                                                 \n",
+      " dense_32_units_2 (Dense)    (None, 32)                1056      \n",
+      "                                                                 \n",
+      " dropout_2 (Dropout)         (None, 32)                0         \n",
+      "                                                                 \n",
+      " dense_16_units (Dense)      (None, 16)                528       \n",
+      "                                                                 \n",
+      " dropout_3 (Dropout)         (None, 16)                0         \n",
+      "                                                                 \n",
+      " output (Dense)              (None, 1)                 17        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 1,729\n",
+      "Trainable params: 1,729\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = fully_connected(verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "236be548",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_name_to_save = 'fully_connected'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "a8441d05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(\n",
+    "    optimizer=keras.optimizers.Adam(learning_rate=0.01),\n",
+    "    loss=keras.losses.MeanAbsoluteError(),\n",
+    "    metrics=['accuracy']\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "a8100403",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "390/454 [========================>.....] - ETA: 0s - loss: 5163.0405 - accuracy: 0.0000e+00\n",
+      "Epoch 00001: val_loss improved from inf to 4877.88574, saving model to models\\fully_connected.h5\n",
+      "454/454 [==============================] - 1s 1ms/step - loss: 5058.4443 - accuracy: 0.0000e+00 - val_loss: 4877.8857 - val_accuracy: 0.0000e+00\n",
+      "Epoch 2/10\n",
+      "452/454 [============================>.] - ETA: 0s - loss: 5057.7158 - accuracy: 0.0000e+00\n",
+      "Epoch 00002: val_loss did not improve from 4877.88574\n",
+      "454/454 [==============================] - 0s 927us/step - loss: 5054.2681 - accuracy: 0.0000e+00 - val_loss: 4877.8857 - val_accuracy: 0.0000e+00\n",
+      "Epoch 3/10\n",
+      "398/454 [=========================>....] - ETA: 0s - loss: 5117.3418 - accuracy: 0.0000e+00\n",
+      "Epoch 00003: val_loss did not improve from 4877.88574\n",
+      "454/454 [==============================] - 0s 905us/step - loss: 5054.2676 - accuracy: 0.0000e+00 - val_loss: 4877.8857 - val_accuracy: 0.0000e+00\n",
+      "Epoch 4/10\n",
+      "392/454 [========================>.....] - ETA: 0s - loss: 5156.3311 - accuracy: 0.0000e+00\n",
+      "Epoch 00004: val_loss did not improve from 4877.88574\n",
+      "454/454 [==============================] - 0s 912us/step - loss: 5054.2651 - accuracy: 0.0000e+00 - val_loss: 4877.8857 - val_accuracy: 0.0000e+00\n",
+      "Epoch 5/10\n",
+      "441/454 [============================>.] - ETA: 0s - loss: 5068.3315 - accuracy: 0.0000e+00\n",
+      "Epoch 00005: val_loss did not improve from 4877.88574\n",
+      "454/454 [==============================] - 0s 947us/step - loss: 5054.2666 - accuracy: 0.0000e+00 - val_loss: 4877.8857 - val_accuracy: 0.0000e+00\n",
+      "Epoch 6/10\n",
+      "406/454 [=========================>....] - ETA: 0s - loss: 5055.8452 - accuracy: 0.0000e+00\n",
+      "Epoch 00006: val_loss did not improve from 4877.88574\n",
+      "454/454 [==============================] - 0s 998us/step - loss: 5054.2676 - accuracy: 0.0000e+00 - val_loss: 4877.8857 - val_accuracy: 0.0000e+00\n",
+      "Epoch 7/10\n",
+      "453/454 [============================>.] - ETA: 0s - loss: 5038.8218 - accuracy: 0.0000e+00\n",
+      "Epoch 00007: val_loss did not improve from 4877.88574\n",
+      "454/454 [==============================] - 0s 934us/step - loss: 5054.2700 - accuracy: 0.0000e+00 - val_loss: 4877.8857 - val_accuracy: 0.0000e+00\n",
+      "Epoch 8/10\n",
+      "392/454 [========================>.....] - ETA: 0s - loss: 4927.9453 - accuracy: 0.0000e+00\n",
+      "Epoch 00008: val_loss did not improve from 4877.88574\n",
+      "454/454 [==============================] - 0s 907us/step - loss: 5054.2656 - accuracy: 0.0000e+00 - val_loss: 4877.8857 - val_accuracy: 0.0000e+00\n",
+      "Epoch 9/10\n",
+      "422/454 [==========================>...] - ETA: 0s - loss: 4967.0269 - accuracy: 0.0000e+00\n",
+      "Epoch 00009: val_loss did not improve from 4877.88574\n",
+      "454/454 [==============================] - 0s 987us/step - loss: 5054.2656 - accuracy: 0.0000e+00 - val_loss: 4877.8857 - val_accuracy: 0.0000e+00\n",
+      "Epoch 10/10\n",
+      "454/454 [==============================] - ETA: 0s - loss: 5054.2671 - accuracy: 0.0000e+00\n",
+      "Epoch 00010: val_loss did not improve from 4877.88574\n",
+      "454/454 [==============================] - 0s 926us/step - loss: 5054.2671 - accuracy: 0.0000e+00 - val_loss: 4877.8857 - val_accuracy: 0.0000e+00\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ModelCheckpoint to save model in case of interrupting the learning process\n",
+    "checkpoint = keras.callbacks.ModelCheckpoint(\n",
+    "    f\"models/{model_name_to_save}.h5\",\n",
+    "    monitor=\"val_loss\",\n",
+    "    mode=\"min\",\n",
+    "    save_best_only=True,\n",
+    "    verbose=1)\n",
+    "\n",
+    "callbacks = [checkpoint]\n",
+    "\n",
+    "history = model.fit(numeric_data,\n",
+    "                    y_train,\n",
+    "                    epochs=10,\n",
+    "                    batch_size=64,\n",
+    "                    validation_split=0.2,\n",
+    "                   callbacks=callbacks)\n",
+    "\n",
+    "model.save(f\"models/{model_name_to_save}.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04637c5b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e553f23",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4efc8701",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "id": "ed9d25e0",
    "metadata": {},
@@ -1188,7 +1388,7 @@
     "# Variable-length sequence of ints\n",
     "text_2_input = keras.Input(shape=(None,), name=\"comments_input\")\n",
     "\n",
-    "# Binary vectors of size `num_tags`\n",
+    "# 3 vectors of numbers\n",
     "numbers_input = keras.Input(shape=(3,), name=\"numbers_input\")\n",
     "\n",
     "# Embed each word into a 50-dimensional vector using pretrained GloVe embeddings\n",
@@ -1209,7 +1409,7 @@
     "concat = layers.concatenate(\n",
     "    [text_1_features, text_2_features, numbers_input], name='concatenate')\n",
     "\n",
-    "# FInal part of the model\n",
+    "# Final part of the model\n",
     "dense_1 = layers.Dense(32, activation='relu', name='dense_32_units')(concat)\n",
     "dropout_1 = layers.Dropout(0.3, name=\"dropout_1\")(dense_1)\n",
     "dense_2 = layers.Dense(16, activation='relu', name='dense_16_units')(dropout_1)\n",
