Update model notebook and fix typo in data transformation name

--- a/data_transformations.ipynb
+++ b/data_transformations.ipynb
@@ -1568,7 +1568,7 @@
    "outputs": [],
    "source": [
     "pickle.dump(author_text_data_train, open(\"models/data/author_text_data_train.p\", \"wb\"))\n",
-    "pickle.dump(author_text_data_train, open(\"models/data/author_text_data_train.p\", \"wb\"))\n",
+    "pickle.dump(author_text_data_test, open(\"models/data/author_text_data_test.p\", \"wb\"))\n",
     "\n",
     "pickle.dump(comments_data_train, open(\"models/data/comments_data_train.p\", \"wb\"))\n",
     "pickle.dump(comments_data_test, open(\"models/data/comments_data_test.p\", \"wb\"))"
@@ -1582,7 +1582,7 @@
    "outputs": [],
    "source": [
     "pickle.dump(embeddings_1, open(\"models/data/embeddings_1.p\", \"wb\"))\n",
-    "pickle.dump(embeddings_2, open(\"models/data/embeddings_2.p\", \"wb\"))\n"
+    "pickle.dump(embeddings_2, open(\"models/data/embeddings_2.p\", \"wb\"))"
    ]
   },
   {
@@ -1593,9 +1593,10 @@
    "outputs": [],
    "source": [
     "# load data from numpy\n",
-    "# filename = np.load('filename.npy')\n",
+    "# var = np.load('filename.npy')\n",
     "\n",
-    "# aaas = pickle.load(open(\"author_text_data_train.p\", 'rb'))"
+    "# from pickle\n",
+    "# var = pickle.load(open(\"filename.p\", 'rb'))"
    ]
   },
   {
