--- a/pretrained_word_embeddings.ipynb
+++ b/pretrained_word_embeddings.ipynb
@@ -52,7 +52,7 @@
     "max_tokens = 10\n",
     "\n",
     "# Maximum number of words in a sentence\n",
-    "# Longer sentences will be truncate, shorter ones will be pad\n",
+    "# Longer sentences will be truncated, shorter ones will be pad\n",
     "sentence_length = 4"
    ]
   },
@@ -10824,7 +10824,7 @@
     "        max_tokens (int): size of the vocabulary.\n",
     "            The layer will consider only 'max_tokens' top popular words\n",
     "        sentence_length (int): maximum number of words in a sentence.\n",
-    "            Longer sentences will be truncate, shorter ones will be pad\n",
+    "            Longer sentences will be truncated, shorter ones will be pad\n",
     "\n",
     "    Returns:\n",
     "        vectorizer layer (tf.keras.layers.TextVectorization)\n",
@@ -11216,7 +11216,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -11230,7 +11230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
