Minor typos fixes

--- a/data_transformations.ipynb
+++ b/data_transformations.ipynb
@@ -181,7 +181,7 @@
     "        max_tokens (int): size of the vocabulary.\n",
     "            The layer will consider only 'max_tokens' top popular words\n",
     "        sentence_length (int): maximum number of words in a sentence.\n",
-    "            Longer sentences will be truncate, shorter ones will be pad\n",
+    "            Longer sentences will be truncated, shorter ones will be pad\n",
     "\n",
     "    Returns:\n",
     "        vectorizer layer (tf.keras.layers.TextVectorization)\n",
@@ -1718,7 +1718,7 @@
     "max_tokens = 10000\n",
     "\n",
     "# Maximum number of words in a sentence\n",
-    "# Longer sentences will be truncate, shorter ones will be pad\n",
+    "# Longer sentences will be truncated, shorter ones will be pad\n",
     "sentence_length_author = 350\n",
     "sentence_length_comments = 750"
    ]
