Minor fixes - add +2 comment

--- a/pretrained_word_embeddings.ipynb
+++ b/pretrained_word_embeddings.ipynb
@@ -49,7 +49,7 @@
    "source": [
     "# Size of the vocabulary\n",
     "# The layer will consider only the 'max_tokens' top popular words\n",
-    "max_tokens = 10\n",
+    "max_tokens = 10  # including 2 for OOV and pad\n",
     "\n",
     "# Maximum number of words in a sentence\n",
     "# Longer sentences will be truncated, shorter ones will be pad\n",
